[package]
name = "bb8_cypher"
version = "0.4.0"
license = "MIT"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
repository = "https://github.com/flosse/r2d2-cypher"
description = "Cypher support for the r2d2 connection pool"
readme = "README.md"
edition = "2018"

keywords = ["cypher", "neo4j", "r2d2"]

[dependencies]
rusted_cypher = { git = "https://github.com/hobofan/rusted-cypher", rev = '2031c082b8cccf41b01005906a1a86ce178c7500' }
bb8 = "0.3.0"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }
l337 = { git = "https://github.com/OneSignal/L3-37", rev = "6d96fefa75c748d4ac3618ab2bd9523d589b6cd2", optional = true }

