[package]
name = "bb8_cypher"
version = "0.4.0"
license = "MIT"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
repository = "https://github.com/flosse/r2d2-cypher"
description = "Cypher support for the r2d2 connection pool"
readme = "README.md"
edition = "2018"

keywords = ["cypher", "neo4j", "r2d2"]

[dependencies]
rusted_cypher = { git = "https://github.com/hobofan/rusted-cypher", rev = 'ab30cdb6b9a0ff7ef0299ee02fa5cb41a0eb3c0d' }
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }

bb8 = { version = "0.3.0", optional = true }
l337 = { git = "https://github.com/OneSignal/L3-37", rev = "6d96fefa75c748d4ac3618ab2bd9523d589b6cd2", optional = true }

