[package]
name = "bb8_cypher"
version = "0.4.0"
license = "MIT"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
repository = "https://github.com/flosse/r2d2-cypher"
description = "Cypher support for the r2d2 connection pool"
readme = "README.md"
edition = "2018"

keywords = ["cypher", "neo4j", "l337"]

[dependencies]
rusted_cypher = { git = "https://github.com/hobofan/rusted-cypher", rev = '61829fe43395c7c78be835b0045222a906f184f4' }
l337 = { git = "https://github.com/OneSignal/L3-37", rev = "a970fe669787c4caf8ae699870b97ed1d7616f00" }
futures = "0.3.0"
async-trait = "0.1.22"
